[package]
name = "quadtree"
version = "0.3.4"
edition = "2021"
description = "A generic quadtree implementation"
license = "MIT"
repository = "https://github.com/benbaarber/quadtree"
keywords = ["quadtree"]

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = "0.33.0"
serde = { version = "1.0.204", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.122"
